--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -174,8 +174,8 @@ strong {
 }
 
 section {
-  margin-left: 300px; /* Match the sidebar's width */
-  width: calc(100% - 270px); /* Sidebar width + extra margin or padding */
+  margin-left: 300px; 
+  width: calc(100% - 270px); 
   padding-bottom: 30px;
 }
 
