--- a/_sass/jekyll-theme-minimalist.scss
+++ b/_sass/jekyll-theme-minimalist.scss
@@ -175,8 +175,9 @@ strong {
 
 section {
   margin-left: 300px; 
-  width: calc(100% - 270px); 
-  padding-bottom: 30px;
+  width:610px;
+  float:right;
+  padding-bottom:30px
 }
 
 
