--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
           {% if site.blank_title %}
             <h1>{{ site.title | default: site.github.repository_name }}</h1>
           {% else %}
-            <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+            <h1>{{ site.title | default: site.github.repository_name }}</h1>
           {% endif %}
 
           {% if site.email %}
